[package]
name = "aiq"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
atomic-wait = ["dep:atomic-wait"]
lock_api = ["dep:lock_api"]
nightly = []
parking_lot = ["dep:parking_lot", "lock_api"]
queue-state = []
std = []


[dependencies]
atomic-wait = { version = "1.1.0", optional = true }
cfg-if = "1"
crossbeam-utils = "0.8"
lock_api = { version = "0.4", optional = true }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["sync"] }

[package.metadata.docs.rs]
all-features = true
