[package]
name = "aiq"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
atomic-wait = ["dep:atomic-wait"]
lock_api = ["dep:lock_api"]
parking_lot = ["dep:parking_lot", "lock_api"]
queue-state = []
std = []

[dependencies]
atomic-wait = { version = "1.1.0", optional = true }
cfg-if = "1"
crossbeam-utils = "0.8"
lock_api = { version = "0.4", optional = true }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
arrayvec = "0.7.6"
criterion = "0.8.2"
futures = "0.3.32"
pin-project-lite = "0.2.16"
tokio = { version = "1.49.0", features = ["full"] }
tokio-test = "0.4.5"

[lib]
test = false

[[example]]
name = "mutex"
required-features = ["queue-state"]

[[example]]
name = "notify"
required-features = ["queue-state"]

[[example]]
name = "semaphore"
required-features = ["queue-state"]

[[test]]
name = "miri_notify"
required-features = ["queue-state"]

[[test]]
name = "miri_semaphore"
required-features = ["queue-state"]

[[test]]
name = "mutex"
required-features = ["queue-state"]

[[test]]
name = "mutex_owned"
required-features = ["queue-state"]

[[test]]
name = "notify"
required-features = ["queue-state"]

[[test]]
name = "notify_owned"
required-features = ["queue-state"]

[[test]]
name = "semaphore"
required-features = ["queue-state"]

[[test]]
name = "semaphore_owned"
required-features = ["queue-state"]

[[bench]]
name = "notify"
required-features = ["queue-state"]
harness = false

[[bench]]
name = "tokio_notify"
harness = false

[[bench]]
name = "semaphore"
required-features = ["queue-state"]
harness = false

[[bench]]
name = "tokio_semaphore"
harness = false

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(nightly)"] }

[lints.clippy]
dbg_macro = "warn"