[package]
name = "aiq"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
alloc = []
atomic-wait = ["dep:atomic-wait"]
lock_api = ["dep:lock_api"]
parking_lot = ["dep:parking_lot", "lock_api"]
pthread = ["dep:libc", "alloc"]
std = ["alloc"]

[dependencies]
atomic-wait = { version = "1", optional = true }
cfg-if = "1"
libc = { version = "0.2", optional = true }
lock_api = { version = "0.4", optional = true }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
arrayvec = "0.7.6"
criterion = "0.8.2"
futures = "0.3.32"
pin-project-lite = "0.2.16"
tokio = { version = "1.49.0", features = ["full"] }
tokio-test = "0.4.5"

[target.'cfg(loom)'.dependencies]
loom = "0.7.2"
const_fn = "0.4.12"

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.7.2", features = ["futures"] }

[lib]
test = false

[[bench]]
name = "notify"
harness = false

[[bench]]
name = "tokio_notify"
harness = false

[[bench]]
name = "semaphore"
harness = false

[[bench]]
name = "tokio_semaphore"
harness = false

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(nightly)", "cfg(loom)"] }
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
dbg_macro = "warn"
semicolon_if_nothing_returned = "forbid"